# clean-code-bot

./: .env.example  .gitignore  README.md  pyproject.toml  readme.txt  requirements.md  requirements.txt
clean_code_bot/: __init__.py  cli.py  groq_client.py  prompt_template.py  sanitization.py
examples/: after.js  before.js
