[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-code-bot"
version = "0.1.0"
description = "CLI that refactors source files via Groq with SOLID-focused, documented output"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[project.scripts]
clean-code-bot = "clean_code_bot.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["clean_code_bot*"]
